--- a/.inputrc
+++ b/.inputrc
@@ -1,8 +1,9 @@
-set completion-ignore-case On
+set completion-ignore-case on
 set expand-tilde on
 set convert-meta off
 set input-meta on
 set output-meta on
 set show-all-if-ambiguous on
 set visible-stats on
+set mark-symlinked-directories on
 TAB: menu-complete
