--- a/Dotfiles/.inputrc
+++ b/Dotfiles/.inputrc
@@ -8,3 +8,13 @@ set visible-stats on
 set mark-symlinked-directories on
 TAB: menu-complete
 set bell-style none
+
+# mappings for making up and down arrow searching through history:
+"\e[A": history-search-backward
+"\e[B": history-search-forward
+"\e[C": forward-char
+"\e[D": backward-char
+
+#Use [Tab] and [Shift]+[Tab] to cycle through all the possible completions:
+"\t": menu-complete
+"\e[Z": menu-complete-backward
