--- a/Dotfiles/.gitconfig
+++ b/Dotfiles/.gitconfig
@@ -17,3 +17,8 @@
   excludesfile = ~/.gitignore
 [branch]
   autosetuprebase = always
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
