New year old me

--- a/Dotfiles/.gitconfig
+++ b/Dotfiles/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  email = jackellis1504@gmail.com
-  name = Jack Ellis
+	email = jackellis1504@gmail.com
+	name = Jack
 [color]
   ui = auto
 [alias]
