Updated .gitconfig with details

--- a/Dotfiles/.gitconfig
+++ b/Dotfiles/.gitconfig
@@ -1,6 +1,7 @@
 [user]
+  mail = jackellis1504@gmail.com
+	name = Jack Ellis
 	email = jackellis1504@gmail.com
-  name = Jack
 [color]
   ui = auto
 [alias]
