Moved things to inputrc

--- a/Dotfiles/.inputrc
+++ b/Dotfiles/.inputrc
@@ -22,11 +22,11 @@ set mark-symlinked-directories on
 set bell-style none
 
 # mappings for making up and down arrow searching through history:
-#"\e[A": history-search-backward
-#"\e[B": history-search-forward
-#"\e[C": forward-char
-#"\e[D": backward-char
+"\e[A": history-search-backward
+"\e[B": history-search-forward
+"\e[C": forward-char
+"\e[D": backward-char
 
 #Use [Tab] and [Shift]+[Tab] to cycle through all the possible completions:
-#"\t": menu-complete
-#"\e[Z": menu-complete-backward
+"\t": menu-complete
+"\e[Z": menu-complete-backward
