--- a/Dotfiles/.gitconfig
+++ b/Dotfiles/.gitconfig
@@ -17,10 +17,10 @@
   default = simple
 [core]
   excludesfile = ~/.gitignore
-[branch]
-  autosetuprebase = always
 [filter "lfs"]
   required = true
   clean = git-lfs clean -- %f
   smudge = git-lfs smudge -- %f
   process = git-lfs filter-process
+[branch]
+	autosetuprebase = never
