--- a/Dotfiles/.xsessionrc
+++ b/Dotfiles/.xsessionrc
@@ -4,4 +4,4 @@ xinput set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Timeout" 200
 xinput set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Axes" 6 7 4 5
 xset s noblank
 xset -dpms
-xset -s off
+xset s off
